2008-11-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Ron McOuat <rmcouat at smartt dot com>

	* ext/soup/gstsouphttpsrc.c: (gst_soup_http_src_class_init),
	(gst_soup_http_src_init), (gst_soup_http_src_dispose),
	(gst_soup_http_src_set_property), (gst_soup_http_src_get_property),
	(gst_soup_http_src_authenticate_cb), (gst_soup_http_src_start):
	* ext/soup/gstsouphttpsrc.h:
	* tests/check/elements/souphttpsrc.c: (basic_auth_cb),
	(digest_auth_cb), (run_test), (GST_START_TEST),
	(souphttpsrc_suite), (run_server):
	Add support for basic and digest authentication in souphttpsrc.
	Fixes bug #561775.

2008-11-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Pepijn Van Eeckhoudt
	              <pepijn dot vaneeckhoudt at luciad dot com>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_create_header_buf),
	(gst_wavenc_sink_setcaps), (gst_wavenc_change_state):
	* gst/wavenc/gstwavenc.h:
	* gst/wavenc/riff.h:
	Add support for a-law and mu-law encoded wav files. Fixes bug #562434.

2008-11-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: 이문형 <iwings at gmail dot com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_loop_udp):
	Prevent further read/write actions taken to the connect-failed socket by
	erroring out quickly. See #562258.

2008-11-26  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/level/level-example.c:
	  Set fakesink to sync. Otherwise people might question the message
	  interval. Nevertheless the timestamp in the message is what matters.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/icles/.cvsignore:
	cvsignore newly generated file.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstasteriskh263.c:
	* gst/rtp/gstasteriskh263.h:
	* gst/rtp/gstrtpL16depay.c: (gst_rtp_L16_depay_setcaps):
	* gst/rtp/gstrtpL16depay.h:
	* gst/rtp/gstrtpL16pay.c:
	* gst/rtp/gstrtpL16pay.h:
	* gst/rtp/gstrtpac3depay.c: (gst_rtp_ac3_depay_setcaps):
	* gst/rtp/gstrtpac3depay.h:
	* gst/rtp/gstrtpamrdepay.c: